tests/spec/compile-pass/069_task_detach.zn
// category: compile-pass
// profile: hosted
// purpose: detach explicitly settles a task handle without waiting for the result

module tests.pass.taskDetach;

async fn runWork(move work: Work) -> Result<Unit, WorkError> {
    return process(move work);
}

fn launchBackground(move runtime: Runtime, move work: Work) -> Result<Unit, WorkError> {
    val task = try runtime.spawn(runWork(move work));

    move task.detach();
    return Ok(());
}
