tests/spec/compile-fail/113_task_await_method_removed.zn
// category: compile-fail
// profile: hosted
// purpose: Task handles are awaited with the await operator, not a Task.await method

module tests.fail.taskAwaitMethodRemoved;

async fn bad(move runtime: Runtime, move work: Work) -> Result<Unit, WorkError> {
    val task = try runtime.spawn({
        return process(move work);
    });

    try move task.await(); // expected-error: Task<T> has no await method; use await task
    return Ok(());
}
